# Qollider

./: .gitignore  README.md
Qollider/: gradle.properties  settings.gradle
Qollider/app/: build.gradle
Qollider/app/src/main/: AndroidManifest.xml
Qollider/app/src/main/cpp/: CMakeLists.txt  dpr_fix.cpp
Qollider/app/src/main/java/org/qtproject/examples/qollider/: MainActivity.java
Qollider/app/src/main/res/drawable/: calib_guide_border.xml
Qollider/app/src/main/res/layout/: activity_main.xml
Qollider/app/src/main/res/values/: strings.xml  themes.xml
Qollider/app/src/main/res/values-night/: themes.xml
Qollider/gradle/: libs.versions.toml
Qollider/gradle/wrapper/: gradle-wrapper.properties
qollider_qml/: .gitignore  ArenaWalls.qml  CMakeLists.txt  GameOverScreen.qml  GlowBall.qml  Main.qml  MainMenuScreen.qml  Racket.qml  RacketBody.qml  StartScreen.qml  main.cpp  qollider_qml.qmlproject  qollider_qml.qrc
qollider_qml/pingpong_assets/meshes/: raquette_001_Cover_002_0_mesh.mesh  raquette_001_Grip_002_0_mesh.mesh  raquette_001_Handle_002_0_mesh.mesh  raquette_001_Strap_002_0_mesh.mesh
qollider_qml/skybox_assets/meshes/: sphere__0.mesh
qollider_qml/ui_assets/: black-hand-silhouette.eps
